--- a/src/app/components/parking/parking-list/parking-list.component.html
+++ b/src/app/components/parking/parking-list/parking-list.component.html
@@ -9,10 +9,10 @@
 
   <div class="row align-items-center justify-content-center">
     <div class="form-group">
-      <input type="text" [(ngModel)]="parkingnameTerm" placeholder=" Filter by name">
+      <input type="text" [(ngModel)]="parkingnameTerm" placeholder=" Filter by name" class="form-control">
     </div>
     <div class="form-group">
-      <input type="text" [(ngModel)]="parkingaddressTerm" placeholder=" Filter by address">
+      <input type="text" [(ngModel)]="parkingaddressTerm" placeholder=" Filter by address" class="form-control">
     </div>
   </div>
 
